# EpMedia

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/java/com/joe/epmediademo/Activity/: EditActivity.java  MainActivity.java
app/src/main/java/com/joe/epmediademo/Utils/: HandlerUtil.java
gradle/wrapper/: gradle-wrapper.properties
joevideolib/: build.gradle
joevideolib/src/main/: AndroidManifest.xml
joevideolib/src/main/java/Jni/: FFmpegCmd.java
joevideolib/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
